--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,11 @@
 # Skip on updates to the readme.
 # We can force this by adding [skip ci] or [ci skip] anywhere in commit message 
 skip_commits:
-  message: /updated readme.*|update readme.*s/
+  message: /updated readme.*|update readme.*s/ 
+
+environment:
+  PSGalleryApiKey:
+    secure: LwSHxTwnDG7eUFOPZSAfy5Wj0Zi5hUc7CB290hC3DcnmVkvK5y76h6miZJUJCBBw
 
 os: WMF 5
 
